--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,12 +1,34 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.user-auth {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bold;
+}
+
+.user-auth > h1 {
+  text-align: center;
+}
+
+.user-auth > form {
+  width: 80vh;
+  height: 80vh;
+  background-color: white;
+  padding: 0 20px;
+}
+
+.user-auth-link {
+  color: black;
 }
 
 body > #root > div {
   height: 100vh;
   background-image: linear-gradient(0deg, #adb7ff, #bcfcff);
-  font-family: 'Quicksand', sans-serif;
   overflow: hidden;
 }
 
@@ -26,21 +48,44 @@ body > #root > div {
   color: #0079c4;
 }
 
+.navbar-links-container {
+  display: flex;
+  align-items: flex-end;
+}
+
+.navbar-link {
+  display: flex;
+  width: 15vh;
+  height: 5vh;
+  color: white;
+  background-color: #0c0c9f;
+  margin: 0 5px;
+  padding: 0 5px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.navbar-link:hover {
+  background-color: #0079c4;
+}
+
 .todolist {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 100%;
+  max-height: 500px;
+  overflow: auto;
 }
 
 .todolist-container {
-  width: 35%;
+  margin-top: 0;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex: 1;
-  max-width: 80vh;
-  max-height: 500px;
-  overflow: auto;
 }
 
 .todolist-items {
@@ -84,6 +129,10 @@ body > #root > div {
   background-color: white;
 }
 
+.todolist-checkbox:hover {
+  background-color: #ceedff;
+}
+
 .todolist-checkbox-ticked {
   position: absolute;
   height: 100%;
@@ -98,6 +147,14 @@ body > #root > div {
 .todolist-icons-container > button {
   margin: auto 0;
   margin-right: 4px;
+}
+
+.checkbox-label {
+  margin-right: 0.5em;
+}
+.checkbox {
+  height: 1em;
+  width: 1em;
 }
 
 svg,
@@ -120,7 +177,7 @@ img {
 .search-bar > input {
   border: none;
   height: 100%;
-  width: 25%;
+  width: 30%;
   padding-left: 10px;
 }
 
@@ -201,6 +258,7 @@ img {
 .dropdown-card {
   width: inherit;
   background-color: white;
+  box-shadow: 0px 2px 10px #d5d5d5;
 }
 
 .dropdown-options {
