--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -71,6 +71,19 @@ body > #root > div {
   background-color: #0079c4;
 }
 
+.view {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 2vh;
+  height: 80%;
+}
+
+.todos-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .todolist {
   display: flex;
   flex-direction: column;
@@ -82,7 +95,7 @@ body > #root > div {
 
 .todolist-container {
   margin-top: 0;
-  width: 30%;
+  width: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -172,12 +185,13 @@ img {
   align-items: center;
   justify-content: center;
   margin-top: 5vh;
+  width: 80vh;
 }
 
 .search-bar > input {
   border: none;
   height: 100%;
-  width: 30%;
+  width: 100%;
   padding-left: 10px;
 }
 
@@ -192,12 +206,13 @@ img {
 
 .search-icon {
   background-color: white;
-  height: 100%;
+  height: 6vh;
   padding: 5px;
 }
 
 .viewbar-container {
   height: 6vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   margin: 2vh 0;
@@ -206,15 +221,12 @@ img {
 .viewbar {
   display: flex;
   align-items: center;
-  background-color: #eff9ff;
+  background-color: white;
   height: inherit;
-  width: 35%;
+  width: 100%;
 }
 
 .view-text {
-  height: 100%;
-  display: flex;
-  align-items: center;
   padding: 0 10px;
   font-weight: bold;
 }
@@ -225,8 +237,8 @@ img {
 
 .dropdown {
   height: 100%;
+  width: 40%;
   align-items: stretch;
-  align-self: flex-start;
   display: flex;
   flex-direction: column;
   background-color: #eff9ff;
@@ -256,7 +268,7 @@ img {
 }
 
 .dropdown-card {
-  width: inherit;
+  width: 100%;
   background-color: white;
   box-shadow: 0px 2px 10px #d5d5d5;
 }
@@ -284,4 +296,18 @@ form {
   max-height: 700px;
   max-width: 80vh;
   overflow: auto;
+}
+
+.calendar-container {
+  display: flex;
+  justify-content: center;
+}
+
+.react-calendar {
+  width: 96% !important;
+  border: none !important;
+}
+
+.react-calendar__tile {
+  height: 100px;
 }
