--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   font-family: 'Quicksand', sans-serif;
+  font-size: 0.8rem;
+}
+
+.btn {
+  font-size: 0.8rem;
 }
 
 .user-auth {
