set url variable and implemented start end date adjustments

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -295,7 +295,8 @@ img {
 
 .todo-form {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 form {
